# aolserver-refactor

./: .gitignore  CMakeLists.txt  README.md  http23.md
.github/workflows/: h2spec.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  FindV8.cmake  Http23Deps.cmake  Http3Deps.cmake  InstallLayout.cmake  nsconfig.h.in
cmake/patches/: README.md  apply-ngtcp2-undersized-initial.sh  nghttp2-1.61.0-data-failfast-rst-stream.patch  nghttp2-1.61.0-disable-stream-reset-goaway.patch  nghttp2-1.61.0-headers-half-closed-rst.patch  nghttp2-1.61.0-priority-half-closed-remote.patch  nghttp2-1.61.0-unexpected-continuation-rst.patch  ngtcp2-1.21.0-allow-undersized-initial.patch
docker/: Dockerfile.ci  run-ci-build.sh
include/: ns.h  nsthread.h
nscgi/: CMakeLists.txt
nscp/: CMakeLists.txt
nsd/: CMakeLists.txt  conn.c  connio.c  driver.c  http2.c  http3.c  http3_body.inc  nsd.h  return.c  sock.c  tclcmds.c  tclhttp2.c  tclhttp3.c
nsdb/: CMakeLists.txt
nsjs/: CMakeLists.txt  README.md  nsjs.cc
nsjs/dashboard/: build.mjs  package-lock.json  package.json  tailwind.config.js
nsjs/dashboard/src/: App.jsx  client-entry.jsx  server-entry.jsx  styles.css
nsjs/dashboard/src/components/: Badge.jsx  Card.jsx  DataTable.jsx  EChartsWrapper.jsx  MiniChart.jsx  ProgressBar.jsx  StatCard.jsx  Tabs.jsx
nsjs/dashboard/src/sections/: AdpCache.jsx  Caches.jsx  Drivers.jsx  JsEngine.jsx  Log.jsx  Memory.jsx  Overview.jsx  ServerStats.jsx
nsjs/pages/: stats-api.js  stats-server-bundle.js  stats-styles.css  stats.jsadp
nsjs/tests/: config.tcl  test_nsjs.py
nsjs/tests/pages/: adp-counter.jsadp  expr.jsadp  header.js  hello.js  isolation.js  method.js  mixed.jsadp  multiwrite.js  query.js  runtime-error.js  shared-incr.js  shared-ops.js  static.jsadp  stats-api.js  stats-client-bundle.js  stats-styles.css  stats.jsadp  syntax-error.js  test_atshutdown.js  test_cache.js  test_cache2.js  test_cond.js  test_config.js  test_config_extended.js  test_conn_extended.js  test_conn_extended2.js  test_crypt.js  test_dns.js  test_env.js  test_file.js  test_file_extended.js  test_hello.js  test_html.js  test_html_extended.js  test_http.js  test_image.js  test_info.js  test_js_stats.js  test_mutex.js  test_process.js  (+13 more)
nslog/: CMakeLists.txt
nsperm/: CMakeLists.txt
nsproxy/: CMakeLists.txt  nsproxylib.c
nssock/: CMakeLists.txt  nssock.c
nsssl/: CMakeLists.txt  nsssl.c
nstclsh/: CMakeLists.txt
nsthread/: CMakeLists.txt  nsthreadtest.c  pthread.c  thread.c
nszlib/: CMakeLists.txt
tests/: test-nsd-shutdown.sh
tests/h1test/: run-http1-tests.sh
tests/h2test/: generate-tls-certs.sh  h2_ping_client.py  minimal.tcl  run-h2spec.sh  stress-parallel-h2.sh
tests/h2test/servers/s1/modules/nsssl/: README.md
tests/h3test/: minimal.tcl  run-h3spec.sh
tests/new/: http.test
